--- a/sqcrab-builder/Cargo.toml
+++ b/sqcrab-builder/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sqcrab-samples"
+name = "sqcrab-builder"
 version.workspace = true
 authors.workspace = true
 homepage.workspace = true
@@ -8,8 +8,7 @@ license-file.workspace = true
 edition.workspace = true
 
 [dependencies]
-sqcrab = { path = "../sqcrab" }
-sqcrab-macro = { path = "../sqcrab-macro" }
-
-[build-dependencies]
-sqcrab-builder = { path = "../sqcrab-builder" }
+proc-macro2 = { version = "1.0" }
+syn = { version = "2.0", features = ["full"] }
+quote = "1.0"
+walkdir = "2.5.0"
