--- a/sqcrab-builder/Cargo.toml
+++ b/sqcrab-builder/Cargo.toml
@@ -11,4 +11,5 @@ edition.workspace = true
 proc-macro2 = { version = "1.0" }
 syn = { version = "2.0", features = ["full"] }
 quote = "1.0"
+toml = "0.9.11"
 walkdir = "2.5.0"
